fix bug with yaml for contact page, replace background on marquee, add small spacing for phone numbers in mobile view

--- a/html/contact.html
+++ b/html/contact.html
@@ -2,13 +2,13 @@
 title: Contact
 layout: default
 link:
-text: Contact
-url: contact.html
+    text: Contact
+    url: contact.html
 weight: 5
 ---
 <div class="main-container container">
 
-    <section class="marquee marquee--custom" style="background-image: url('images/services-masthead.jpg');">
+    <section class="marquee marquee--custom" style="background-image: url('images/contact-masthead.jpg');">
         <div class="marquee--flex">
             <div class="marquee__wrapper">
                 <h1>Come Visit<br>Us Today!</h1>
