--- a/html/patients.html
+++ b/html/patients.html
@@ -8,37 +8,45 @@ weight: 2
 ---
 <div class="main-container container">
 
-    <section class="marquee">
-        <div class="marquee_wrapper clearfix">
-            <div class="marquee__slick">
-                <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
-                    <div class="marquee__slide-wrapper">
-                        <div class="slide--text-center container center">
-                            <h1>Scheduling Your First Appointment is Easy!</h1>
+    <section class="marquee marquee--custom">
+        <div class="">
+            <div class="marquee__wrapper clearfix">
+                <div class="marquee__slick">
+                    <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
+                        <div class="marquee__slide-wrapper">
+                            <div class="slide--text-center container center">
+                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
+                        <div class="marquee__slide-wrapper">
+                            <div class="slide--text-center container center">
+                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
+                        <div class="marquee__slide-wrapper">
+                            <div class="slide--text-center container center">
+                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
-                    <div class="marquee__slide-wrapper">
-                        <div class="slide--text-center container center">
-                            <h1>Scheduling Your First Appointment is Easy!</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
-                    <div class="marquee__slide-wrapper">
-                        <div class="slide--text-center container center">
-                            <h1>Scheduling Your First Appointment is Easy!</h1>
-                        </div>
-                    </div>
-                </div>
+            </div>
+            <div class="smooth-scroll-btn marquee__scroll-down">
+                <a href="" data-href="#section__visit">
+                    <h4 class="scroll__text">Scroll Down</h4>
+                    <img src="images/arrow-down.svg" alt="Down Arrow">
+                </a>
             </div>
         </div>
     </section>
 
     {% include organisms/contact.html %}
 
-    <section class="first-visit background-light-purple section-margins section-padding">
+    <section id="section__visit" class="first-visit background-light-purple section-margins section-padding">
         <div class="first-visit__content clearfix">
             <div class="heading first-visit__heading">
                 <h2>The First Dental Visit</h2>
