add scroll down to team page

--- a/html/patients.html
+++ b/html/patients.html
@@ -9,7 +9,7 @@ weight: 2
 <div class="main-container container">
 
     <section class="marquee marquee--custom">
-        <div class="">
+        <div>
             <div class="marquee__wrapper clearfix">
                 <div class="marquee__slick">
                     <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
