--- a/html/team.html
+++ b/html/team.html
@@ -8,15 +8,24 @@ weight: 1
 ---
 <div class="main-container container">
 
-    <section class="marquee" style="background-image: url('images/drs-slide.jpg');">
-        <div class="marquee__wrapper">
-
+    <section class="marquee marquee--custom" style="background-image: url('images/drs-slide.jpg');">
+        <div class="marquee--flex marquee--flex-topleft">
+            <div class="marquee__wrapper">
+                <h1 class="font-accent-purple">A caring & positive<br>dental experience<br>for your kids</h1>
+                <h2 class="team--byline font-accent-purple">Meet Drs. Kirk Kollmann <br>& Cissy Furusho</h2>
+            </div>
+        </div>
+        <div class="smooth-scroll-btn marquee__scroll-down">
+            <a href="" data-href="#section__team">
+                <h4 class="scroll__text">Scroll Down</h4>
+                <img src="images/arrow-down.svg" alt="Down Arrow">
+            </a>
         </div>
     </section>
 
     {% include organisms/contact.html %}
 
-    <section class="team section-margins">
+    <section id="section__team" class="team section-margins">
         <div class="team_wrapper clearfix">
 
             <div class="heading team__heading background-light-purple">
