--- a/html/index.html
+++ b/html/index.html
@@ -46,11 +46,17 @@ weight: 0
         </div>
       </div>
     </div>
+    <div class="smooth-scroll-btn marquee__scroll-down">
+      <a href="" data-href="#section__about">
+        <h4 class="scroll__text">Scroll Down</h4>
+        <img src="images/arrow-down.svg" alt="Down Arrow">
+      </a>
+    </div>
   </section>
 
   {% include organisms/contact.html %}
 
-  <section class="about">
+  <section id="section__about" class="about">
     <div class="about__content clearfix">
       <div class="background-light-green about__first-section">
         <div class="row">
