add modals for the team members

--- a/html/team.html
+++ b/html/team.html
@@ -39,7 +39,7 @@ weight: 1
                             <img src="images/bios/furusho-bio.jpg" alt="">
                         </div>
                         <div class="col-sm-9 furusho-bio">
-                            <h3>Cissy K. Furusho, DDS</h3>
+                            <h3 class="team__main-title font-accent-purple">Cissy K. Furusho, DDS</h3>
                             <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
                                 Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
                                 oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
@@ -60,7 +60,7 @@ weight: 1
                         <img src="images/bios/kollmann-bio.jpg" alt="">
                     </div>
                     <div class="col-sm-9 col-sm-pull-3 kollman-bio">
-                        <h3>Kirk B. Kollman, DMD</h3>
+                        <h3 class="team__main-title font-accent-purple">Kirk B. Kollman, DMD</h3>
                         <p>Dr. Kirk Kollmann graduated from the University of Florida College of Dentistry and received his
                             pediatric dental degree from Children's Hospital of Michigan in Detroit. Keeping with his
                             hospital background, he is a clinical instructor and volunteers his time working with the Cleft
