attach request appointment links to contact page contact form

--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@ weight: 5
         </div>
     </section>
 
-    <section class="contact-form section-margins background-light-green">
+    <section id="section-contact" class="contact-form section-margins background-light-green">
         <div class="contact-form__wrapper container clearfix">
 
             <div class="heading contact-form__heading">
