fix carousel prev button not showing and height issue with the carousel slides

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@ weight: 0
 ---
 <div class="main-container container">
 
-  <section class="marquee">
+  <section class="marquee marquee--adaptive">
     <div class="marquee_wrapper clearfix">
       <div class="marquee__slick">
         <div class="marquee__slide" style="background-image: url('images/slide1.jpg');">
