clean up the links in the header, link first to items, add font styling and color

--- a/html/index.html
+++ b/html/index.html
@@ -95,7 +95,7 @@ weight: 0
     </div>
   </section>
 
-  <section class="specials section-padding" style="background-image: url('images/specials-bkgd.jpg');">
+  <section id="section-specials" class="specials section-padding" style="background-image: url('images/specials-bkgd.jpg');">
     <div class="heading specials__heading heading--small">
       <h2 class="font-accent-white">New Patient Specials</h2>
       <h4 class="font-accent-white">Offers end September 20, 2016</h4>
@@ -137,7 +137,7 @@ weight: 0
     </div>
   </section>
 
-  <section class="reviews background-light-purple">
+  <section id="section-reviews" class="reviews background-light-purple">
     <div class="reviews__heading heading heading--small background-light-purple">
       <h2>See What Parents are Saying</h2>
     </div>
