--- a/html/contact.html
+++ b/html/contact.html
@@ -57,7 +57,7 @@ weight: 5
             </div>
 
             <div class="contact-form__content col-md-10 col-md-offset-1">
-                <form action="" class="contact-form__form center">
+                <form form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify" class="contact-form__form center">
                     <p>Yes! Please contact me to schedule an appointment or answer any questions I might still have:</p>
                     <div class="contact_form__row">
                         <label for="name">My name:</label>
@@ -71,7 +71,7 @@ weight: 5
                         <label for="phone">Phone Number:</label>
                         <input type="text" name="phone" id="phone" class="contact_form__input"/>
                     </div>
-                    <a href="#" class="btn">Request Appointment</a>
+                    <button action="submit" class="btn">Request Appointment</button>
                 </form>
             </div>
         </div>
