clean up responsiveness, fix marquee caption to be on only contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@ weight: 5
 ---
 <div class="main-container container">
 
-    <section class="marquee marquee--custom" style="background-image: url('images/contact-masthead.jpg');">
+    <section class="marquee marquee--custom marquee--captioned" style="background-image: url('images/contact-masthead.jpg');">
         <div class="marquee--flex">
             <div class="marquee__wrapper">
                 <h1>Come Visit<br>Us Today!</h1>
