--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@ link:
   url: index.html
 weight: 0
 ---
-<div class="main-container container">
+<div class="main-container">
 
   <section class="marquee marquee--adaptive">
     <div class="marquee_wrapper clearfix">
