various fixes to layout in mobile view

--- a/html/patients.html
+++ b/html/patients.html
@@ -13,21 +13,21 @@ weight: 2
             <div class="marquee__wrapper clearfix">
                 <div class="marquee__slick">
                     <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
-                        <div class="marquee__slide-wrapper">
+                        <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
                                 <h1>Scheduling Your First Appointment is Easy!</h1>
                             </div>
                         </div>
                     </div>
                     <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
-                        <div class="marquee__slide-wrapper">
+                        <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
                                 <h1>Scheduling Your First Appointment is Easy!</h1>
                             </div>
                         </div>
                     </div>
                     <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
-                        <div class="marquee__slide-wrapper">
+                        <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
                                 <h1>Scheduling Your First Appointment is Easy!</h1>
                             </div>
