fix size of patients marquee

--- a/html/patients.html
+++ b/html/patients.html
@@ -9,33 +9,31 @@ weight: 2
 <div class="main-container container">
 
     <section class="marquee marquee--custom">
-        <div>
             <div class="marquee__wrapper clearfix">
                 <div class="marquee__slick">
                     <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
                         <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
-                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
                             </div>
                         </div>
                     </div>
                     <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
                         <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
-                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
                             </div>
                         </div>
                     </div>
                     <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
                         <div class="marquee-patients marquee__slide-wrapper">
                             <div class="slide--text-center container center">
-                                <h1>Scheduling Your First Appointment is Easy!</h1>
+                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
             <div class="smooth-scroll-btn marquee__scroll-down">
                 <a href="" data-href="#section__visit">
                     <h4 class="scroll__text">Scroll Down</h4>
