add floating section from sketch to the services page

--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,7 @@ weight: 0
                 aspects of children, how to make them feel comfortable, and to make the experience pleasant in addition to
                 clinical techniques specific to children. <span class="font--highlight">We are especially trained and qualified to treat patients with
               special needs.</span></p>
-              <a class="font-accent-purple" href="#">Read More</a>
+              <a class="font-accent-purple" href="patients.html#">Read More</a>
             </div>
             <div class="col-md-6 about__more">
               <h3 class="font-accent-purple">What Makes  Dentistry for Kids Special?</h3>
@@ -87,7 +87,7 @@ weight: 0
                 case of the very apprehensive family. <span class="font--highlight">By bringing your child to a pediatric dentist as early as age one
               year</span>, you can ensure the timely prevention of dental disease and at the same time provide your child with
                 an upbeat experience that can last a lifetime.</p>
-              <a class="font-accent-purple" href="#">Read More</a>
+              <a class="font-accent-purple" href="services.html#">Read More</a>
             </div>
           </div>
         </div>
