--- a/html/services.html
+++ b/html/services.html
@@ -11,7 +11,7 @@ weight: 3
     <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
 
         <div class="marquee--flex marquee--flex--bottomright">
-            <div class="marquee__wrapper marquee__title--smaller">
+            <div class="marquee__wrapper marquee__title--smallest">
                 <h1>Find out more about<br>Dentistry for Kids</h1>
             </div>
         </div>
@@ -88,6 +88,34 @@ weight: 3
                         <h6>Digital x-Rays</h6>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="comfort background-light-purple section-margins section-padding">
+        <div class="comfort__content clearfix">
+            <div class="heading comfort__heading">
+                <h2>About Fixing Teeth</h2>
+            </div>
+
+            <div class="col-md-6 col-md-push-6">
+                <img src="images/furusho-interaction.jpg" alt="Smiling young girl">
+            </div>
+            <div class="col-md-6 col-md-pull-6">
+                <p>When a child's teeth have been damaged by dental decay, trauma or congenital defects, we carefully
+                    consider several factors before making a decision as to how to fix those teeth. Some of these
+                    factors include the age of the child, how severely the tooth has been damaged, and in the case of a
+                    baby tooth, how long that tooth has to function in the mouth. The relative importance of esthetics
+                    versus durability often determines which filling material we use. In any case, we believe in doing a
+                    procedure once and doing it right.</p>
+                <p>Our decisions for treating your child are never based on finances or insurance especially if it
+                    compromises the quality of treatment your child receives. We will discuss all the options with you
+                    but we hope you trust us to choose the methods and materials that will provide the best long-term
+                    results for you and your children and that our recommendations will always be in the best interest
+                    of your child... who is Number One.</p>
+                <p>Prevention is always better than treatment. By actively preventing disease and decay through regular
+                    home care, professional dental cleanings and regular exams, your child will maintain a healthy,
+                    beautiful smile.</p>
             </div>
         </div>
     </section>
