clean up responsiveness of the menu

--- a/html/frenectomy.html
+++ b/html/frenectomy.html
@@ -2,7 +2,7 @@
 title: Infant Frenectomy
 layout: default
 link:
-    text: Infant Frenectomy
+    text: Infant&nbsp;Frenectomy
     url: frenectomy.html
 weight: 4
 ---
