--- a/html/index.html
+++ b/html/index.html
@@ -17,11 +17,13 @@ weight: 0
           <div class="marquee__slide-wrapper">
             <div class="slide--text-left container">
               <div class="row">
-                <div class="col-md-8">
-                  <h1 class="marquee__main-text">Creating happy healthy smiles one child at a time</h1>
-                  <h3 class="marquee__byline uppercase">Now Welcoming</h3>
-                  <h3 class="marquee__byline uppercase">New Patients</h3>
-                  <a href="" class="btn btn--inverted">New Patient Offers</a>
+                <div class="col-md-6 col-sm-6">
+                  <div class="home-page-marquee">
+                    <h1 class="marquee__main-text">Creating happy healthy smiles one child at a time</h1>
+                    <h3 class="marquee__byline uppercase">Now Welcoming</h3>
+                    <h3 class="marquee__byline uppercase">New Patients</h3>
+                    <a href="" class="btn btn--inverted">New Patient Offers</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -31,14 +33,16 @@ weight: 0
           <div class="marquee__slide-wrapper">
             <div class="container">
               <div class="col-md-5 col-sm-6">
-                <div class="marquee__stars">
-                  {% include molecule/stars.html stars=5 %}
-                </div>
-                <div class="marquee__quote">
-                  <h3>“My three kids love them. Great team, very organized operation and state of the art technology is a
-                    recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h3>
-                  <h3>–Ron N.</h3>
-                <a href="" class="btn btn--inverted">Read Our Reviews</a>
+                <div class="home-page-marquee">
+                  <div class="marquee__stars">
+                    {% include molecule/stars.html stars=5 %}
+                  </div>
+                  <div class="marquee__quote">
+                    <h3>“My three kids love them. Great team, very organized operation and state of the art technology is a
+                      recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h3>
+                    <h3>–Ron N.</h3>
+                    <a href="" class="btn btn--inverted">Read Our Reviews</a>
+                  </div>
                 </div>
               </div>
             </div>
