--- a/html/team.html
+++ b/html/team.html
@@ -2,7 +2,7 @@
 title: Meet The Team
 layout: default
 link:
-    text: Meet The Team
+    text: Meet&nbsp;The&nbsp;Team
     url: team.html
 weight: 1
 ---
