move footer into container, remove extra container from everypage

--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@ link:
     url: contact.html
 weight: 5
 ---
-<div class="main-container container">
+<div class="main-container">
 
     <section class="marquee marquee--custom marquee--captioned" style="background-image: url('images/contact-masthead.jpg');">
         <div class="marquee--flex">
