--- a/html/frenectomy.html
+++ b/html/frenectomy.html
@@ -6,7 +6,7 @@ link:
     url: frenectomy.html
 weight: 4
 ---
-<div class="main-container container">
+<div class="main-container">
 
     <section class="marquee" style="background-image: url('images/frenectomy-slide.jpg');">
         <div class="marquee--flex">
