--- a/html/patients.html
+++ b/html/patients.html
@@ -6,7 +6,7 @@ link:
     url: patients.html
 weight: 2
 ---
-<div class="main-container container">
+<div class="main-container">
 
     <section class="marquee marquee--custom">
             <div class="marquee__wrapper clearfix">
