--- a/html/services.html
+++ b/html/services.html
@@ -6,7 +6,7 @@ link:
     url: services.html
 weight: 3
 ---
-<div class="main-container container">
+<div class="main-container">
 
     <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
 
