--- a/html/team.html
+++ b/html/team.html
@@ -6,7 +6,7 @@ link:
     url: team.html
 weight: 1
 ---
-<div class="main-container container">
+<div class="main-container">
 
     <section class="marquee marquee--custom" style="background-image: url('images/drs-slide.jpg');">
         <div class="marquee--flex marquee--flex-topleft">
