styling of header and marquee

--- a/html/services.html
+++ b/html/services.html
@@ -8,7 +8,7 @@ weight: 3
 ---
 <div class="main-container">
 
-    <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
+    <section class="marquee section-margins" style="background-image: url('images/services-masthead.jpg');">
 
         <div class="marquee--flex marquee--flex--bottomright">
             <div class="marquee__wrapper marquee__title--smallest">
