--- a/html/frenectomy.html
+++ b/html/frenectomy.html
@@ -8,7 +8,7 @@ weight: 4
 ---
 <div class="main-container">
 
-    <section class="marquee" style="background-image: url('images/frenectomy-slide.jpg');">
+    <section class="marquee section-margins" style="background-image: url('images/frenectomy-slide.jpg');">
         <div class="marquee--flex">
             <div class="marquee__wrapper">
                 <div class="container">
