--- a/html/team.html
+++ b/html/team.html
@@ -8,7 +8,7 @@ weight: 1
 ---
 <div class="main-container">
 
-    <section class="marquee marquee--custom" style="background-image: url('images/drs-slide.jpg');">
+    <section class="marquee marquee--custom section-margins" style="background-image: url('images/drs-slide.jpg');">
         <div class="marquee--flex marquee--flex-topleft">
             <div class="marquee__wrapper">
                 <h1 class="font-accent-purple">A caring & positive<br>dental experience<br>for your kids</h1>
