--- a/html/team.html
+++ b/html/team.html
@@ -8,18 +8,26 @@ weight: 1
 ---
 <div class="main-container">
 
-    <section class="marquee marquee--custom section-margins" style="background-image: url('images/drs-slide.jpg');">
-        <div class="marquee--flex marquee--flex-topleft">
-            <div class="marquee__wrapper">
-                <h1 class="font-accent-purple">A caring & positive<br>dental experience<br>for your kids</h1>
-                <h2 class="team--byline font-accent-purple">Meet Drs. Kirk Kollmann <br>& Cissy Furusho</h2>
-            </div>
+    <!--<section class="marquee marquee&#45;&#45;custom section-margins" style="background-image: url('images/drs-slide.jpg');">-->
+        <!--<div class="marquee&#45;&#45;flex marquee&#45;&#45;flex-topleft">-->
+            <!--<div class="marquee__wrapper">-->
+                <!--<h1 class="font-accent-purple">A caring & positive<br>dental experience<br>for your kids</h1>-->
+                <!--<h2 class="team&#45;&#45;byline font-accent-purple">Meet Drs. Kirk Kollmann <br>& Cissy Furusho</h2>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="smooth-scroll-btn marquee__scroll-down">-->
+            <!--<a href="" data-href="#section__team">-->
+                <!--<h4 class="scroll__text">Scroll Down</h4>-->
+                <!--<img src="images/arrow-down.svg" alt="Down Arrow">-->
+            <!--</a>-->
+        <!--</div>-->
+    <!--</section>-->
+    <section class="team-header section-margins">
+        <div class="team-header-wrapper hidden-xs">
+            <img src="images/drs-slide.jpg" alt="Dr. Furusho">
         </div>
-        <div class="smooth-scroll-btn marquee__scroll-down">
-            <a href="" data-href="#section__team">
-                <h4 class="scroll__text">Scroll Down</h4>
-                <img src="images/arrow-down.svg" alt="Down Arrow">
-            </a>
+        <div class="team-header-wrapper hidden-sm hidden-md hidden-lg">
+            <img src="images/team-mobile.jpg" alt="Dr. Furusho">
         </div>
     </section>
 
