--- a/html/team.html
+++ b/html/team.html
@@ -48,17 +48,17 @@ weight: 1
         <div class="team_wrapper clearfix">
 
             <div class="heading team__heading background-light-purple">
-                <h2>Meet The Team</h2>
+                <h1>Meet The Team</h1>
             </div>
 
-            <div class="background-light-purple">
+            <div class="background-light-purple pad-bottom">
                 <div class="container">
                     <div class="row furusho">
-                        <div class="col-sm-3 furusho__image">
-                            <img src="images/bios/furusho-bio.jpg" alt="">
+                        <div class="col-md-3 col-sm-4 main-bio-pic">
+                            <img src="images/bios/furusho-bio.jpg" alt="picture of dentist">
                         </div>
-                        <div class="col-sm-9 furusho-bio">
-                            <h3 class="team__main-title font-accent-purple">Cissy K. Furusho, DDS</h3>
+                        <div class="col-md-9 col-sm-8 furusho-bio">
+                            <h3 class="team__main-title pad-bottom font-accent-purple">Cissy K. Furusho, DDS</h3>
                             <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
                                 Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
                                 oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
@@ -73,13 +73,13 @@ weight: 1
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container pad-vert">
                 <div class="row kollman">
-                    <div class="col-sm-3 col-sm-push-9 kollman__image">
-                        <img src="images/bios/kollmann-bio.jpg" alt="">
+                    <div class="col-md-3 col-sm-4 col-md-push-9 col-sm-push-8 main-bio-pic">
+                        <img src="images/bios/kollmann-bio.jpg" alt="picture of dentist">
                     </div>
-                    <div class="col-sm-9 col-sm-pull-3 kollman-bio">
-                        <h3 class="team__main-title font-accent-purple">Kirk B. Kollman, DMD</h3>
+                    <div class="col-md-9 col-sm-8 col-md-pull-3 col-sm-pull-4 kollman-bio">
+                        <h3 class="team__main-title pad-bottom font-accent-purple">Kirk B. Kollman, DMD</h3>
                         <p>Dr. Kirk Kollmann graduated from the University of Florida College of Dentistry and received his
                             pediatric dental degree from Children's Hospital of Michigan in Detroit. Keeping with his
                             hospital background, he is a clinical instructor and volunteers his time working with the Cleft
