import cleaner associations slider from the semantic version

--- a/html/team.html
+++ b/html/team.html
@@ -93,25 +93,8 @@ weight: 1
                 </div>
             </div>
             <hr>
-            <section class="associations">
-                <div class="slide">
-                   <div class="image-pad"><img src="images/associations/aapd.png" alt="aapd"/></div>
-                    <div class="image-pad"><img src="images/associations/acd.png" alt="acd"/></div>
-                    <div class="image-pad"><img src="images/associations/abpd.png" alt="abpd"/></div>
-                </div>
-                <div class="slide">
-                    <div class="image-pad"><img src="images/associations/ada.png" alt="ada"/></div>
-                    <div class="image-pad"><img src="images/associations/ald.png" alt="ald"/></div>
-                    <div class="image-pad"><img src="images/associations/cds.png" alt="cds"/></div>
-                    <div class="image-pad"><img src="images/associations/iatp.png" alt="iatp"/></div>
-                </div>
-                <div class="slide">
-                    <div class="image-pad"><img src="images/associations/aap.png" alt="aap"/></div>
 
-                    <div class="image-pad"><img src="images/associations/ilca.png" alt="ilca"/></div>
-                    <div class="image-pad"><img src="images/associations/isds.png" alt="isds"/></div>
-                </div>
-            </section>
+            {% include organisms/associations.html %}
             <section class="team-additional background-light-purple">
                 <div class="team-slider">
                     <div class="team-member">
