clean up styling around the next and prev buttons

--- a/html/team.html
+++ b/html/team.html
@@ -58,7 +58,7 @@ weight: 1
                             <img src="images/bios/furusho-bio.jpg" alt="picture of dentist">
                         </div>
                         <div class="col-md-9 col-sm-8 furusho-bio">
-                            <h3 class="team__main-title pad-bottom font-accent-purple">Cissy K. Furusho, DDS</h3>
+                            <h2 class="team__main-title pad-bottom font-accent-purple">Cissy K. Furusho, DDS</h2>
                             <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
                                 Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
                                 oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
@@ -79,7 +79,7 @@ weight: 1
                         <img src="images/bios/kollmann-bio.jpg" alt="picture of dentist">
                     </div>
                     <div class="col-md-9 col-sm-8 col-md-pull-3 col-sm-pull-4 kollman-bio">
-                        <h3 class="team__main-title pad-bottom font-accent-purple">Kirk B. Kollman, DMD</h3>
+                        <h2 class="team__main-title pad-bottom font-accent-purple">Kirk B. Kollman, DMD</h2>
                         <p>Dr. Kirk Kollmann graduated from the University of Florida College of Dentistry and received his
                             pediatric dental degree from Children's Hospital of Michigan in Detroit. Keeping with his
                             hospital background, he is a clinical instructor and volunteers his time working with the Cleft
@@ -95,7 +95,8 @@ weight: 1
             <hr>
 
             {% include organisms/associations.html %}
-            <section class="team-additional background-light-purple">
+
+            <section class="team-additional background-light-purple marg-top">
                 <div class="team-slider">
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#adam">
