fix alignment of marquee slides (adjusted for the scroll down button

--- a/html/contact.html
+++ b/html/contact.html
@@ -25,7 +25,7 @@ weight: 5
     </section>
 
     <section id="section__location" class="location section-margins">
-        <div class="location__wrapper container clearfix">
+        <div class="location__wrapper clearfix">
             <div class="heading location__heading">
                 <h1>Our Location</h1>
             </div>
