fix styling and layout of home page marquee slider

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@ weight: 0
 
   <section id="section-specials" class="specials section-padding" style="background-image: url('images/specials-bkgd.jpg');">
     <div class="heading specials__heading heading--small">
-      <h2 class="font-accent-white">New Patient Specials</h2>
+      <h1 class="font-accent-white">New Patient Specials</h1>
       <h4 class="font-accent-white">Offers end September 20, 2016</h4>
     </div>
     <div class="specials__content">
@@ -96,8 +96,8 @@ weight: 0
   </section>
 
   <section id="section-reviews" class="reviews background-light-purple">
-    <div class="reviews__heading heading heading--small background-light-purple">
-      <h2>See What Parents are Saying</h2>
+    <div class="reviews__heading heading background-light-purple">
+      <h1 class="h1-smaller header--fix">See What Parents are Saying</h1>
     </div>
 
     <div class="reviews__main" style="background-image: url('images/home-testimonials.jpg')">
