style mobile menu and polish smooth scrolls

--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@ weight: 5
             </div>
         </div>
         <div class="smooth-scroll-btn marquee__scroll-down hidden-xs">
-            <a href="" data-href="#section__frenectomy">
+            <a href="#" data-scrollto="#section__location" data-offset="50">
                 <h4 class="scroll__text">Scroll Down</h4>
                 <img src="images/arrow-down.svg" alt="Down Arrow">
             </a>
