--- a/html/services.html
+++ b/html/services.html
@@ -20,7 +20,7 @@ weight: 3
             <img src="images/services-mobile.jpg" alt="Dr. Kollman">
         </div>
         <div class="smooth-scroll-btn marquee__scroll-down hidden-xs">
-            <a href="" data-href="#section__frenectomy">
+            <a href="#" data-scrollto="#section__services" data-offset="50">
                 <h4 class="scroll__text">Scroll Down</h4>
                 <img src="images/arrow-down.svg" alt="Down Arrow">
             </a>
