--- a/html/team.html
+++ b/html/team.html
@@ -21,7 +21,7 @@ weight: 1
             <img src="images/team-mobile.jpg" alt="Dr. Furusho">
         </div>
         <div class="smooth-scroll-btn marquee__scroll-down hidden-xs">
-            <a href="" data-href="#section__team">
+            <a href="#" data-scrollto="#section__team" data-offset="50">
                 <h4 class="scroll__text">Scroll Down</h4>
                 <img src="images/arrow-down.svg" alt="Down Arrow">
             </a>
