--- a/html/frenectomy.html
+++ b/html/frenectomy.html
@@ -20,7 +20,7 @@ weight: 4
             <img src="images/infant-mobile.jpg" alt="Baby smiling">
         </div>
         <div class="smooth-scroll-btn marquee__scroll-down hidden-xs">
-            <a href="" data-href="#section__frenectomy">
+            <a href="#"  data-scrollto="#section__frenectomy" data-offset="50">
                 <h4 class="scroll__text">Scroll Down</h4>
                 <img src="images/arrow-down.svg" alt="Down Arrow">
             </a>
