--- a/html/patients.html
+++ b/html/patients.html
@@ -8,51 +8,19 @@ weight: 2
 ---
 <div class="main-container">
 
-    <section class="marquee marquee--custom section-margins">
-            <div class="marquee__wrapper clearfix">
-                <div class="marquee__slick">
-                    <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
-                        <div class="marquee-patients marquee__slide-wrapper">
-                            <div class="slide--text-center container center">
-                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
-                        <div class="marquee-patients marquee__slide-wrapper">
-                            <div class="slide--text-center container center">
-                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
-                        <div class="marquee-patients marquee__slide-wrapper">
-                            <div class="slide--text-center container center">
-                                <h1 class="marquee-patients-content">Scheduling Your First Appointment is Easy!</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="smooth-scroll-btn marquee__scroll-down">
-                <a href="" data-href="#section__visit">
-                    <h4 class="scroll__text">Scroll Down</h4>
-                    <img src="images/arrow-down.svg" alt="Down Arrow">
-                </a>
-            </div>
-    </section>
+    {% include organisms/marquee-tour.html %}
 
     {% include organisms/contact.html %}
 
     <section id="section__visit" class="first-visit background-light-purple section-margins section-padding">
         <div class="first-visit__content clearfix">
             <div class="heading first-visit__heading">
-                <h2>The First Dental Visit</h2>
+                <h1>The First Dental Visit</h1>
             </div>
 
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/kollmann-interaction.jpg" alt="">
+                    <img class="pad-bottom" src="images/kollmann-interaction.jpg" alt="Dr. Kollman">
                 </div>
                 <div class="col-md-6">
                     <p>For some children and parents, the first visit to the dentist can be a stressful situation.
@@ -77,7 +45,7 @@ weight: 2
     <section class="qa clearfix section-margins section-padding background-light-green">
         <div class="qa__wrapper">
             <div class="heading qa__heading">
-                <h2>Parent Questions  & Answers</h2>
+                <h1>Parent Questions  & Answers</h1>
             </div>
         </div>
 
@@ -110,11 +78,11 @@ weight: 2
     <section class="comfort background-light-purple section-margins section-padding">
         <div class="comfort__content clearfix">
             <div class="heading comfort__heading">
-                <h2>Patient Comfort</h2>
+                <h1>Patient Comfort</h1>
             </div>
 
             <div class="col-md-6">
-                <img src="images/patient-comfort.jpg" alt="Smiling young girl">
+                <img class="pad-bottom" src="images/patient-comfort.jpg" alt="Smiling young girl">
             </div>
             <div class="col-md-6">
                 <p>Our office was designed for infants, children and teens. From the arcade games in the waiting room to
